fix: contrast, moveFocusIntoPanel

--- a/classroom/assets/css/main.css
+++ b/classroom/assets/css/main.css
@@ -4057,3 +4057,6 @@ td {
     margin-top: 200px !important;
 }
  */
+.theme-dark #access-form .btn-close {
+  background-color: #fff !important;
+}
